lib/ein/src/compile/type_inference/snapshots/ein__compile__type_inference__type_inferrer__tests__ffi__infer_variable_using_ffi_type.snap
---
source: lib/ein/src/compile/type_inference/type_inferrer.rs
expression: "infer_types(&Module::new(ModulePath::new(Package::new(\"\", \"\"), vec![]),\n                         Export::new(Default::default()), vec![],\n                         BuiltinInterface::new(vec![(\"Foo\" . into(), types ::\n                                                     Number ::\n                                                     new(SourceInformation ::\n                                                         dummy()) .\n                                                     into())].into_iter().collect(),\n                                               Default::default()), vec![],\n                         vec![VariableDefinition ::\n                              new(\"x\", Number ::\n                                  new(42.0, SourceInformation :: dummy()),\n                                  types :: Reference ::\n                                  new(\"Foo\", SourceInformation :: dummy()),\n                                  SourceInformation :: dummy(),) . into()]))"
---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [],
        definitions: [
            VariableDefinition(
                VariableDefinition {
                    name: "x",
                    body: Number(
                        Number {
                            value: 42.0,
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: Reference(
                        Reference {
                            name: "Foo",
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        imports: [],
        builtin_interface: BuiltinInterface {
            types: {
                "Foo": Number(
                    Number {
                        source_information: SourceInformation {
                            source_name: "",
                            location: Location {
                                line_number: 0,
                                column_number: 0,
                            },
                            line: "",
                        },
                    },
                ),
            },
            functions: {},
        },
    },
)
